src/css/bernie.css
html {
  font-family: sans-serif;
}

body {
  -moz-osx-font-smoothing: grayscale;
}

input {
  vertical-align: middle;
  -moz-appearance: none;
}

label.hidden {
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
}

.module {
  position: relative;
  background-color: #147FD7;
  max-width: 600px;
  padding: 1.1em 2em 2em;
  margin: 0px 0.5rem;
  border-radius: 5px;
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
}

.module h2 {
  color: #FFF;
  font-size: 2.4em;
  font-weight: 400;
  font-family: jubilat;
  margin: 0px 0px 0.2em;
  text-align: center;
  padding: 0px 0px 0.5rem;
}

.module hr {
  height: 2px;
  width: 70%;
  border: medium none;
  background-color: #8ABFEB;
  margin-top: 0px;
  margin-bottom: 0px;
}

.module form {
  width: 90%;
  margin: 1.4em auto 0px;
}

.module .first_name,
.module .last_name,
.module .email,
.module .phone,
.module .zip {
  width: 100%;
  margin-bottom: 0.5rem;
}

.module input[type="text"],
.module input[type="number"],
.module input[type="tel"],
.module input[type="email"] {
  outline: 0px none;
  padding-left: 1em;
  font-size: 1.3em;
  font-family: freightsans;
  font-weight: 400;
  font-style: normal;
  height: 42px;
  box-sizing: border-box;
  border-radius: 3px;
  border: 0px none;
}

.module .checkboxgroup {
  position: relative;
  margin-bottom: 5px;
  font-family: freight-sans-pro;
  font-weight: 300;
}

.checkboxgroup input[type="checkbox"] {
  font-size: 1.3em;
  border: 0px none;
  font-family: freightsans;
  color: #333;
  padding-left: 0.5em;
  border-radius: 3px;
  position: absolute;
  display: block;
  height: 25px;
  width: 25px;
  margin-left: 0px;
  top: 3px;
  left: 0px;
}

.checkboxgroup label {
  font-family: freightsans;
  text-transform: uppercase;
  line-height: 1.35;
  letter-spacing: 0.1em;
  color: #FFF;
  padding-top: 5px;
  font-size: 1.1em;
  font-weight: 500;
  margin: 0px 0px 0px 35px;
  padding-bottom: 0.2em;
  display: block;
}

.module input[type="submit"] {
  height: 42px;
  font-size: 1.2em;
  font-family: freightsans;
  font-weight: 700;
  font-style: normal;
  text-transform: uppercase;
  letter-spacing: 0.15em;
  box-sizing: border-box;
  border-radius: 3px;
  border: 0px none;
  background-color: #F55B5B;
  color: #FFF;
  padding: 0.35em 0px 0.5em;
  margin: 0px;
  margin-top: 15px;
  float: none;
  width: 100%;
}

